--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -4,7 +4,7 @@
 body {
   background-color: #121212;
   // padding: 25px;
-  font: 15px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 15.5px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:rgb(240, 240, 240);
 }
 
@@ -18,6 +18,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  color: white;
   font-size: 52.5px;
   margin: 10 0 10px;
 }
