--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -5,7 +5,7 @@ body {
   background-color: #121212;
   // padding: 25px;
   font: 15.5px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:rgb(240, 240, 240);
+  color: #f0f0f0;
 }
 
 p, ul, ol, table, pre, dl {
