--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -70,7 +70,7 @@ img {
 }
 
 header {
-  background-color: rgb(46, 61, 72);
+  // background-color: rgb(46, 61, 72);
   width:300px;
   float:left;
   position:fixed;
