Update body text color to semi-transparent #f0f0f0 for improved readability

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -5,8 +5,7 @@ body {
   background-color: #121212;
   // padding: 25px;
   font: 15px/1.6 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: beige;
-  // color: #f0f0f0;
+  color: #f0f0f0ee;
 }
 
 p, ul, ol, table, pre, dl {
