Remove commented-out downloads section in default layout for cleaner code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %} -->
 
-        {% if site.show_downloads %}
+        <!-- {% if site.show_downloads %}
         <ul class="downloads">
           <li>
             <a href="https://github.com/kdpham-01002" class="icon">
@@ -53,7 +53,21 @@
             </a>
           </li>
         </ul>
-        {% endif %}
+        {% endif %} -->
+        <ul class="downloads">
+          <li>
+            <a href="https://github.com/kdpham-01002" class="icon">
+              <span>View <strong>GitHub</strong></span>
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://drive.google.com/file/d/1XK4EnbtcbcLng_BA5krfmxzvNpKASurw/view?usp=sharing" class="icon">
+              <span>View <strong>Resume</strong></span>
+              <i class="fas fa-download"></i>
+            </a>
+          </li>
+        </ul>
 
         <p class="made-by">View <a href="{{ site.github.repository_url }}">this code</a></p>
 
