--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -302,38 +302,40 @@ footer {
     word-wrap:break-word;
   }
 
-  header {
-    padding:0;
+  // header {
+  //   padding:0;
+  // }
+
+  header, section, footer {
+    float:none;
+    position:static;
+    width:auto;
   }
 
-  header ul, header p.view {
-    position:static;
-  }
+  // header ul, header p.view {
+  //   position:static;
+  // }
 
   pre, code {
     word-wrap:normal;
   }
 
   .downloads-container {
-    margin: auto; /* Adjust spacing for smaller screens */
+    margin: auto;
   }
 
-  // ul.downloads {
-  //   flex-direction: column; /* Stack buttons vertically if needed */
-  //   gap: 10px; /* Space between buttons */
-  // }
 }
 
 @media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
+  // body {
+  //   padding:15px;
+  // }
 
   .downloads {
     width:99%;
   }
 
-  .downloads li, .downloads li + li + li {
+  .downloads li {
     width:33%;
   }
 }
