Add padding to body in downloads styles for improved layout on smaller screens

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -311,6 +311,7 @@ ul.downloads {
 @media print, screen and (max-width: 720px) {
   body {
     word-wrap: break-word;
+    padding: 15px;
   }
 
   header {
