--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -268,8 +268,6 @@ ul.downloads {
   }
 
   section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
   }
@@ -288,6 +286,7 @@ ul.downloads {
 @media print, screen and (max-width: 720px) {
   body {
     word-wrap:break-word;
+    padding:15px;
   }
 
   header {
@@ -321,6 +320,6 @@ ul.downloads {
   body {
     padding:0.4in;
     font-size:12pt;
-    color:#444;
+    color:white;
   }
 }
