Add alignment styles for h1 in downloads section for improved layout

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -273,6 +273,9 @@ ul.downloads {
     word-wrap:break-word;
     padding:15px;
   }
+  h1 {
+    align-items: center;
+  }
 }
 
 @media print, screen and (max-width: 480px) {
